@@ -1,3 +1,5 @@
+2014-01-22: Initial provisions for optionally gathering extended metadata on test runs.
+
 2014-01-19: Add detection of supported netperf options and support passing -e to
             netperf for UDP_RR socket timeout (adds --socket-timeout parameter).
 
